add preview images to bottom

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="slideshow">
       <div class="container">
         <button class="prev-image">Prev</button>
-        <img class="slideshow-image" src="" />
+        <img class="slideshow-image" src="" data-index="test" />
         <button class="next-image">Next</button>
       </div>
       <div class="nav-container"></div>
